--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-import": "^2.16.0"
   },
   "dependencies": {
+    "canvas": "^2.4.1",
     "meow": "^5.0.0",
     "parse-curl": "^0.2.6",
     "request": "^2.88.0",
