prepare for public

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nicodump",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,10 +16,10 @@
   },
   "dependencies": {
     "canvas": "^2.4.1",
+    "cookiefile": "^1.0.10",
+    "https-proxy-agent": "^2.2.2",
     "meow": "^5.0.0",
-    "parse-curl": "^0.2.6",
     "request": "^2.88.0",
-    "socks5-https-client": "^1.2.1",
     "ws": "^6.1.4"
   }
 }
